--- a/python/environment.yml
+++ b/python/environment.yml
@@ -4,16 +4,22 @@ channels:
   - defaults
 dependencies:
   - ca-certificates=2018.4.16=0
-  - certifi=2018.4.16=py36_0
   - openssl=1.0.2o=0
   - quaternion=2018.6.18.16.33.12=py36h470a237_0
+  - setuptools=39.2.0=py36_0
   - blas=1.0=mkl
+  - certifi=2018.4.16=py36_0
+  - cycler=0.10.0=py36hfc81398_0
+  - freetype=2.8=h12048fb_1
   - intel-openmp=2018.0.3=0
+  - kiwisolver=1.0.1=py36h792292d_0
   - libcxx=4.0.1=h579ed51_0
   - libcxxabi=4.0.1=hebd6815_0
   - libedit=3.1.20170329=hb402a30_2
   - libffi=3.2.1=h475c297_4
   - libgfortran=3.0.1=h93005f0_2
+  - libpng=1.6.34=he12f830_0
+  - matplotlib=2.2.2=py36ha7267d0_0
   - mkl=2018.0.3=1
   - mkl_fft=1.0.1=py36h917ab60_0
   - mkl_random=1.0.1=py36h78cc56f_0
@@ -22,18 +28,19 @@ dependencies:
   - numpy-base=1.14.5=py36ha9ae307_1
   - pandas=0.23.1=py36h1702cab_0
   - pip=10.0.1=py36_0
+  - pyparsing=2.2.0=py36hb281f35_0
   - python=3.6.6=hc167b69_0
   - python-dateutil=2.7.3=py36_0
   - pytz=2018.4=py36_0
   - readline=7.0=hc1231fa_4
-  - setuptools=39.2.0=py36_0
   - six=1.11.0=py36h0e22d5e_1
   - sqlite=3.24.0=ha441bb4_0
   - tk=8.6.7=h35a86e2_3
+  - tornado=5.0.2=py36_0
   - wheel=0.31.1=py36_0
   - xz=5.2.4=h1de35cc_4
   - zlib=1.2.11=hf3cbc9b_2
   - pip:
     - numpy-quaternion==2018.6.18.16.33.12
-prefix: /Users/jon/anaconda3/envs/pyvertigo
+prefix: /anaconda3/envs/pyvertigo
 
