--- a/teaching/requirements.txt
+++ b/teaching/requirements.txt
@@ -1,48 +1,3 @@
-appnope==0.1.0
-backports-abc==0.4
-backports.shutil-get-terminal-size==1.0.0
-certifi==2016.8.31
-configparser==3.5.0
-cycler==0.10.0
-decorator==4.0.10
-entrypoints==0.2.2
-enum34==1.1.6
-filterpy==0.1.4
-functools32==3.2.3.post2
-ipykernel==4.5.0
-ipython==5.1.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
-Jinja2==2.8
-jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.4.0
-jupyter-console==5.0.0
-jupyter-core==4.2.0
-MarkupSafe==0.23
-matplotlib==1.5.3
-mistune==0.7.3
-nbconvert==4.2.0
-nbformat==4.1.0
-notebook==4.2.2
-numpy==1.11.1
-pathlib2==2.1.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.7
-ptyprocess==0.5.1
-Pygments==2.1.3
-pyparsing==2.1.9
-python-dateutil==2.5.3
-pytz==2016.6.1
-pyzmq==15.4.0
-qtconsole==4.2.1
-scipy==0.18.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.10.0
-terminado==0.6
-tornado==4.4.1
-traitlets==4.3.0
-wcwidth==0.1.7
-widgetsnbextension==1.2.6
+matplotlib==3.7.2
+numpy==1.25.1
+scipy<=1.11.1
